# ApXiVibeTTS_Bot

./: .gitignore  bot.py  nixpacks.toml  pyproject.toml  requirements.txt
app/: audio_utils.py  chunking.py  groq_text_client.py  history.py  rate_limiter.py  style.py  text_client.py  title.py  tts_client.py  ui.py  web_search.py
tests/: test_audio_utils.py  test_brave_search.py  test_chunking.py  test_config.py  test_groq_text_client.py  test_handlers_progress.py  test_history.py  test_rate_limiter.py  test_style.py  test_telegram_chunking.py  test_text_client.py  test_title.py  test_tts_client.py  test_ui.py  test_web_search.py
